Prune pylint disabled warnings + some fixes.

--- a/pylint.ini
+++ b/pylint.ini
@@ -62,81 +62,18 @@ confidence=
 # --disable=W".
 disable=bad-continuation,
         bad-whitespace,
-        binary-op-exception,
         c-extension-no-member,
-        cell-var-from-loop,
-        cmp-method,
-        consider-using-sys-exit,
-        cyclic-import,
-        deprecated-str-translate-call,
-        deprecated-types-field,
-        dict-iter-method,
-        dict-view-method,
-        div-method,
-        eval-used,
-        exception-message-attribute,
-        exec-used,
-        expression-not-assigned,
-        filter-builtin-not-iterating,
-        format-combined-specification,
-        global-at-module-level,
-        global-statement,
-        global-variable-not-assigned,
-        global-variable-undefined,
-        hex-method,
-        idiv-method,
         import-outside-toplevel,
         import-star-module-level,
-        input-builtin,
         invalid-name,
-        keyword-arg-before-vararg,
-        line-too-long,
-        long-suffix,
-        map-builtin-not-iterating,
-        metaclass-assignment,
-        misplaced-future,
-        missing-format-attribute,
-        next-method-called,
-        no-absolute-import,
-        no-else-return,
         no-member,
         no-self-use,
-        non-ascii-bytes-literal,
-        nonzero-method,
-        oct-method,
-        old-division,
-        old-octal-literal,
-        parameter-unpacking,
-        possibly-unused-variable,
-        preferred-module,
-        print-statement,
-        range-builtin-not-iterating,
-        rdiv-method,
-        redeclared-assigned-name,
-        redefine-in-handler,
-        reload-builtin,
         round-builtin,
-        shallow-copy-environ,
-        simplify-boolean-expression,
-        subprocess-popen-preexec-fn,
-        subprocess-run-check,
-        superfluous-parens,
-        super-init-not-called,
-        too-few-public-methods,
-        too-many-ancestors,
-        too-many-arguments,
-        too-many-branches,
-        too-many-function-args,
-        too-many-instance-attributes,
-        too-many-locals,
-        too-many-public-methods,
-        too-many-statements,
-        try-except-raise,
         unused-import,
         wildcard-import,
-        wrong-exception-operation,
-        xreadlines-attribute,
-        zip-builtin-not-iterating,
+        too-many-ancestors,
+        too-few-public-methods,
+        duplicate-code
 
 
 [REPORTS]
@@ -552,34 +489,34 @@ preferred-modules=
 [DESIGN]
 
 # Maximum number of arguments for function / method.
-max-args=999999999999
+max-args=7  # Originally 5
 
 # Maximum number of attributes for a class (see R0902).
-max-attributes=999999999999
+max-attributes=10
 
 # Maximum number of boolean expressions in an if statement (see R0916).
 max-bool-expr=3
 
 # Maximum number of branch for function / method body.
-max-branches=999999999999
+max-branches=12
 
 # Maximum number of locals for function / method body.
-max-locals=999999999999
+max-locals=15
 
 # Maximum number of parents for a class (see R0901).
-max-parents=7
+max-parents=7  # `too-many-ancestors` is currently disabled.
 
 # Maximum number of public methods for a class (see R0904).
-max-public-methods=999999999999
+max-public-methods=20
 
 # Maximum number of return / yield for function / method body.
-max-returns=999999999999
+max-returns=6
 
 # Maximum number of statements in function / method body.
-max-statements=999999999999
+max-statements=60  # originally 50
 
 # Minimum number of public methods for a class (see R0903).
-min-public-methods=999999999999
+min-public-methods=2  # `too-few-public-methods` is currently disabled.
 
 
 [EXCEPTIONS]
