--- a/ci/pages.gitlab-ci.yml
+++ b/ci/pages.gitlab-ci.yml
@@ -36,7 +36,7 @@
     pip install nox
     git clone ${CI_REPOSITORY_URL} -b ${TARGET_BRANCH} hikari_docs_${TARGET_BRANCH} --depth=1
     cd "hikari_docs_${TARGET_BRANCH}"
-    nox -s pdoc || nox -s documentation  # FIXME: remove once in master.
+    nox --sessions pages pdoc || nox -s documentation  # FIXME: remove once in master.
     rm ../public -rf && mkdir ../public
     if [[ "$TARGET_BRANCH" = master ]]; then
         cd public
@@ -97,7 +97,7 @@
       apt-get update
       apt-get install -qy graphviz # FIXME: remove once in master
       pip install nox
-      nox -s pdoc || nox -s documentation  # FIXME: remove once in master.
+      nox --sessions pages pdoc
   except:
     - master
     - staging
@@ -113,7 +113,7 @@
       set -e
       set -x
       pip install nox
-      nox -s pdoc
+      nox --sessions pages pdoc
   only:
     # THIS MUST ONLY CONTAIN merge_requests!
     - merge_requests
