--- a/ci/pages.gitlab-ci.yml
+++ b/ci/pages.gitlab-ci.yml
@@ -37,12 +37,15 @@
     cd "hikari_docs_${TARGET_BRANCH}"
     mkdir public || true
     nox --sessions pages pdoc || nox -s documentation  # FIXME: remove once in master.
+    mv ../public/coverage/html ../coverage
     rm ../public -rf && mkdir ../public
     if [[ "$TARGET_BRANCH" = master ]]; then
         cd public
         find . -maxdepth 1 -exec mv {} ../../public \;
+        mv ../../coverage ../../public/coverage
     else
         mv public "../public/${TARGET_BRANCH}"
+        mv ../coverage "../public/${TARGET_BRANCH}/coverage"
     fi
 
 ###
