--- a/ci/releases.gitlab-ci.yml
+++ b/ci/releases.gitlab-ci.yml
@@ -43,7 +43,7 @@
 ### Upload the current code to PyPI as a .dev release.
 ### This will only work on the staging branch.
 ###
-"dev release":
+"release:staging":
   environment:
     name: staging
     url: https://nekokatt.ci.io/hikari/staging
@@ -66,7 +66,7 @@
 ### Upload the current code to PyPI as a production release. This will only
 ### work on the master branch.
 ###
-"prod release":
+"release:master":
   environment:
     name: prod
     url: https://nekokatt.ci.io/hikari
