Migrated accelerator to C++, added base accelerator stuff to setup.py and commented it out.

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,14 @@ public/
 # Secrets
 .pypirc
 
-# Setuptools/twine-generated files
+# Setuptools/twine-generated files, compiled sources.
 build/
 dist/
 *.egg-info/
 pip-wheel-metadata/
+*.so 
+*.o 
+*.pyd
 
 # Tox/Nox-generated files
 .[nt]ox/
