Remove hikari.snowflakes as this was replaced by hikari.bases

--- a/pylint.ini
+++ b/pylint.ini
@@ -70,10 +70,9 @@ disable=bad-continuation,
         no-self-use,
         round-builtin,
         unused-import,
-        wildcard-import,
         too-many-ancestors,
-        too-few-public-methods,
-        duplicate-code
+        too-few-public-methods
+# unused-import seems to throw false positives with no rhyme or reason.
 
 
 [REPORTS]
