--- a/ci/gitlab/installations.yml
+++ b/ci/gitlab/installations.yml
@@ -18,7 +18,7 @@
 ###
 ### Base for testing that the library setup script is valid.
 ###
-.nox-pip-install:
+.pip:
   extends: .reactive-job
   script:
     - |+
@@ -35,8 +35,8 @@
 ###
 "install:3.8.0":
   extends:
-    - .cpython380
-    - .nox-pip-install
+    - .cpython:3.8.0
+    - .pip
 
 ###
 ### Setup script tests for CPython 3.8.1
@@ -45,8 +45,8 @@
 ###
 "install:3.8.1":
   extends:
-    - .cpython381
-    - .nox-pip-install
+    - .cpython:3.8.1
+    - .pip
 
 ###
 ### Setup script tests for CPython 3.8.2
@@ -55,8 +55,8 @@
 ###
 "install:3.8.2":
   extends:
-    - .cpython382
-    - .nox-pip-install
+    - .cpython:3.8.2
+    - .pip
 
 ###
 ### Setup script tests for CPython 3.9.0
@@ -65,5 +65,5 @@
 ###
 "install:3.9.0":
   extends:
-    - .cpython390
-    - .nox-pip-install
+    - .cpython:3.9.0
+    - .pip
