--- a/ci/gitlab/pages.yml
+++ b/ci/gitlab/pages.yml
@@ -15,11 +15,38 @@
 # You should have received a copy of the GNU Lesser General Public License
 # along with Hikari. If not, see <https://www.gnu.org/licenses/>.
 
+###
+### Base for generating documentation.
+###
+.pages:
+  allow_failure: true       # FIXME: remove once in master.
+  artifacts:
+    paths:
+      - public/
+  before_script:
+    - |+
+      set -e
+      set -x
+      apt-get install git -qy
+      git log -n 1 "${CI_COMMIT_SHA}" --format="%B" \
+          | grep -iqE "\[\s*(skip|no|don'?t|do\s+not)\s+pages?\s*\]" \
+        && echo "SKIPPING ${CI_JOB_STAGE} STAGE JOB" \
+        && exit 0
+      mkdir public || true
+  dependencies:
+    - test:3.8.0
+    - test:3.8.1
+    - test:3.8.2
+    - test:3.9.0
+    - pylint
+    - coverage:results
+  extends: .cpython
+  stage: report
 
 ###
 ### Base for generating documentation ready to be published.
 ###
-.generate-pages:
+.pages:generate:
   except:
     - tags
   extends: .pages
@@ -49,54 +76,26 @@
     fi
 
 ###
-### Base for generating documentation.
-###
-.pages:
-  allow_failure: true       # FIXME: remove once in master.
-  artifacts:
-    paths:
-      - public/
-  before_script:
-    - |+
-      set -e
-      set -x
-      apt-get install git -qy
-      git log -n 1 "${CI_COMMIT_SHA}" --format="%B" \
-          | grep -iqE "\[\s*(skip|no|don'?t|do\s+not)\s+pages?\s*\]" \
-        && echo "SKIPPING ${CI_JOB_STAGE} STAGE JOB" \
-        && exit 0
-      mkdir public || true
-  dependencies:
-    - test:3.8.0
-    - test:3.8.1
-    - test:3.8.2
-    - test:3.9.0
-    - pylint
-    - coverage:results
-  extends: .cpython-stable
-  stage: report
-
-###
 ### Generate pages for master branch and export them.
 ###
-"pages:master":
+pages:master:
   allow_failure: true       # FIXME: remove once in master.
-  extends: .generate-pages
+  extends: .pages:generate
   variables:
     TARGET_BRANCH: master
 
 ###
 ### Generate pages for staging branch and export them.
 ###
-"pages:staging":
-  extends: .generate-pages
+pages:staging:
+  extends: .pages:generate
   variables:
     TARGET_BRANCH: staging
 
 ###
 ### Generate pages for the current branch as a test.
 ###
-"pages:test":
+pages:test:
   extends:
     - .pages
     - .reactive-job
@@ -114,7 +113,12 @@
   only:
     - branches
 
-"pages:test:feedback":
+###
+### Generate pages for the current branch as a test, enabling the visual feedback
+### stuff to allow in-site comments being relayed back to the associated merge
+### request.
+###
+pages:feedback:
   extends:
     # DO NOT EXTEND ANYTHING WITH AN only/except BLOCK!
     - .pages
