--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,8 @@ version: "3"
 
 services:
   test-client:
-    build: .
-    entrypoint: pip install --pre hikari && python -m hikari.clients.test --shards=2
+    entrypoint: bash -c 'pip install --pre hikari && python -m hikari.clients.test --shards=2'
     env_file:
       - credentials.env
+    image: python:3.8
     restart: always
