Completed lowlevel REST API request testing.
Fixed failing tests.

Added docstrings and typehints to http_client.

Tidied up

Finished writing tests for HTTPClient

Removed OAuth2 stuff, as aiohttp_oauth2 is more suited for this.

--- a/coverage.ini
+++ b/coverage.ini
@@ -5,9 +5,15 @@ branch = true
 # Uncomment if coverage starts appearing to be incorrect. This makes the tests run at least twice as slowly.
 # timid  = true
 omit =
+    # No logic, only imports.
     hikari/__main__.py
+    # No logic, only version metadata.
     hikari/_about.py
-    hikari/clients/gateway_runner.py
+    # Tests for this would not be possible, since it is a command line application base.
+    hikari/clients/test.py
+    # Tests for this would be pointless too, as this just logs stuff. Running the client is the only
+    # decent way of checking this is presented correctly.
+    hikari/net/tracing.py
 
 [report]
 precision = 2
