Finished file implementation.
Added process pool file support.
Rewrote bytes to work with async iterators again.
Found another Python bug which I have written a work-around for.
Fixed a bunch of linting issues.
Rewrote tests.

--- a/ci/gitlab/installations.yml
+++ b/ci/gitlab/installations.yml
@@ -24,6 +24,7 @@
     - |+
       set -e
       set -x
+      pip install -U pip
       apt install git -y
       pip install nox
       nox --sessions pip-sdist pip-bdist-wheel pip-git
