--- a/ci/gitlab/pages.yml
+++ b/ci/gitlab/pages.yml
@@ -27,6 +27,7 @@
     - |+
       set -e
       set -x
+      pip install -U pip
       apt-get install git -qy
       git log -n 1 "${CI_COMMIT_SHA}" --format="%B" \
           | grep -iqE "\[\s*(skip|no|don'?t|do\s+not)\s+pages?\s*\]" \
