--- a/coverage.ini
+++ b/coverage.ini
@@ -2,18 +2,14 @@
 concurrency = multiprocessing
 parallel = true
 branch = true
-# Uncomment if coverage starts appearing to be incorrect. This makes the tests run at least twice as slowly.
-# timid  = true
+timid = false
+source = hikari
 omit =
-    # No logic, only imports.
     hikari/__main__.py
-    # No logic, only version metadata.
     hikari/_about.py
-    # Tests for this would not be possible, since it is a command line application base.
     hikari/clients/test.py
-    # Tests for this would be pointless too, as this just logs stuff. Running the client is the only
-    # decent way of checking this is presented correctly.
     hikari/net/tracing.py
+    .nox/*
 
 [report]
 precision = 2
