--- a/coverage.ini
+++ b/coverage.ini
@@ -9,6 +9,7 @@ omit =
     hikari/_about.py
     hikari/clients/test.py
     hikari/net/tracing.py
+    hikari/internal/more_typing.py
     .nox/*
 
 [report]
