--- a/ci/gitlab/installations.yml
+++ b/ci/gitlab/installations.yml
@@ -25,8 +25,8 @@
       set -e
       set -x
       apt install git -y
-      pip install nox
-      nox --sessions pip-sdist pip-bdist-wheel pip-git
+      pip install nox 'virtualenv<20.0.19'
+      nox --sessions pip-sdist pip-bdist-wheel pip-git --no-error-on-external-run
   stage: test
 ###
 ### Setup script tests for CPython 3.8.0
