--- a/ci/gitlab/bases.yml
+++ b/ci/gitlab/bases.yml
@@ -16,10 +16,18 @@
 # along with Hikari. If not, see <https://www.gnu.org/licenses/>.
 
 ###
+### All job settings.
+###
+.any-job:
+  artifacts:
+    expire_in: 1 month
+
+###
 ### Mark a job as having reactive defaults, such as firing on merge requests,
 ### new tags, new branches, schedules, new commits; all by default.
 ###
 .reactive-job:
+  extends: .any-job
   only:
     - branches
     - merge_requests
@@ -34,34 +42,40 @@
 ### the correct directory structure.
 ###
 .busybox:musl:
+  extends: .any-job
   image: busybox:1.31.1-musl
 
 ###
 ### CPython 3.8.0 configuration.
 ###
 .cpython:3.8.0:
+  extends: .any-job
   image: python:3.8.0
 
 ###
 ### CPython 3.8.1 configuration.
 ###
 .cpython:3.8.1:
+  extends: .any-job
   image: python:3.8.1
 
 ###
 ### CPython 3.8.2 configuration.
 ###
 .cpython:3.8.2:
+  extends: .any-job
   image: python:3.8.2
 
 ###
 ### CPython 3.9.0 configuration.
 ###
 .cpython:3.9.0:
+  extends: .any-job
   image: python:3.9-rc
 
 ###
 ### Most recent stable CPython release.
 ###
 .cpython:
+  extends: .any-job
   extends: .cpython:3.8.2
