Replaced only/except CI syntax with "rules".
Fixes #351.

--- a/ci/gitlab/integrations.yml
+++ b/ci/gitlab/integrations.yml
@@ -30,14 +30,11 @@ include:
 ###
 dependency_scanning:
   interruptible: true
-  only:
-    # Overly slow to run and not very important, so skip normally to get 5
-    # minutes back on
-    # each pipeline.
-    - merge_requests
-    - schedules
   retry: 1
   stage: test
+  # Do not enable until gitlab 13.0 on 2019-05-22.
+  #rules:
+  #  - if: "$CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_PIPELINE_SOURCE == 'schedule'"
   variables:
     DS_DEFAULT_ANALYZERS: "gemnasium-python"
 
@@ -52,13 +49,10 @@ dependency_scanning:
 ###
 license_scanning:
   interruptible: true
-  only:
-    # Overly slow to run and not very important, so skip normally to get 5
-    # minutes back on
-    # each pipeline.
-    - merge_requests
-    - schedules
   retry: 1
+  # Do not enable until gitlab 13.0 on 2019-05-22.
+  #rules:
+  #  - if: "$CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_PIPELINE_SOURCE == 'schedule'"
   stage: test
 
 ###
@@ -78,8 +72,8 @@ pages:
     - coverage:results
     - pages:staging
   extends: .busybox:musl
-  only:
-    - staging
+  rules:
+    - if: "$CI_COMMIT_REF_NAME == 'staging'"
   script:
     - |+
       set -e
@@ -97,13 +91,10 @@ pages:
 ###
 sast:
   interruptible: true
-  only:
-    # Overly slow to run and not very important, so skip normally to get 5
-    # minutes back on
-    # each pipeline.
-    - merge_requests
-    - schedules
   retry: 1
+  # Do not enable until gitlab 13.0 on 2019-05-22.
+  #rules:
+  #  - if: "$CI_PIPELINE_SOURCE == 'merge_request_event' || $CI_PIPELINE_SOURCE == 'schedule'"
   stage: test
   variables:
     SAST_BANDIT_EXCLUDED_PATHS: tests/*,docs/*,ci/*,insomnia/*,public/*,tasks/*,noxfile.old.py
