--- a/ci/gitlab/bases.yml
+++ b/ci/gitlab/bases.yml
@@ -28,11 +28,11 @@
 ###
 .reactive-job:
   extends: .any-job
-  only:
-    - branches
-    - merge_requests
-    - tags
-    - schedules
+  rules:
+    - if: "$CI_PIPELINE_SOURCE == 'web'"
+    - if: "$CI_PIPELINE_SOURCE == 'schedule'"
+    - if: "$CI_PIPELINE_SOURCE == 'push'"
+    - if: "$CI_PIPELINE_SOURCE == 'merge_request_event'"
 
 ###
 ### Busybox 1.3.1 with musl libc
