--- a/ci/gitlab/pages.yml
+++ b/ci/gitlab/pages.yml
@@ -40,13 +40,11 @@
 ### Base for generating documentation ready to be published.
 ###
 .pages:generate:
-  except:
-    - tags
   extends: .pages
-  only:
-    - staging
   retry:
     max: 2
+  rules:
+    - if: "$CI_COMMIT_REF_NAME == 'staging' && $CI_COMMIT_TAG == null"
   script: |+
     set -x
     apt-get update
@@ -69,6 +67,9 @@ pages:test:
   extends:
     - .pages
     - .reactive-job
+  rules:
+    - if: "$CI_COMMIT_REF_NAME != 'master' && $CI_COMMIT_REF_NAME != 'staging'"
+    - if: "$CI_PIPELINE_SOURCE == 'push' || $CI_PIPELINE_SOURCE == 'web'"
   script:
     - |+
       set -e
@@ -77,11 +78,7 @@ pages:test:
       apt-get install -qy graphviz # FIXME: remove once in master
       pip install nox 'virtualenv<20.0.19'
       nox --sessions pages pdoc --no-error-on-external-run
-  except:
-    - master
-    - staging
-  only:
-    - branches
+
 
 ###
 ### Generate pages for the current branch as a test, enabling the visual feedback
@@ -92,12 +89,11 @@ pages:feedback:
   extends:
     # DO NOT EXTEND ANYTHING WITH AN only/except BLOCK!
     - .pages
+  rules:
+    - if: "$CI_PIPELINE_SOURCE == 'merge_request_event'"
   script:
     - |+
       set -e
       set -x
       pip install nox 'virtualenv<20.0.19'
       nox --sessions pages pdoc --no-error-on-external-run
-  only:
-    # THIS MUST ONLY CONTAIN merge_requests!
-    - merge_requests
