Renamed UniqueEntity and HikariEntity to Unique and Entity, fixing iterator test cases.

--- a/pylint.ini
+++ b/pylint.ini
@@ -67,6 +67,7 @@ disable=bad-continuation,
         import-star-module-level,
         invalid-name,
         no-member,
+        no-method-argument,  # glitched.
         no-self-use,
         invalid-str-returned,  # broken in 2.5.2 for enums
         round-builtin,
