--- a/pylint.ini
+++ b/pylint.ini
@@ -68,6 +68,7 @@ disable=bad-continuation,
         invalid-name,
         no-member,
         no-self-use,
+        invalid-str-returned,  # broken in 2.5.2 for enums
         round-builtin,
         unused-import,
         too-many-ancestors,
