Changed event_manager to be async.

--- a/pylint.ini
+++ b/pylint.ini
@@ -62,6 +62,7 @@ confidence=
 # --disable=W".
 disable=bad-continuation,
         bad-whitespace,
+        broad-except,
         c-extension-no-member,
         import-outside-toplevel,
         import-star-module-level,
