--- a/ci/gitlab/tests.yml
+++ b/ci/gitlab/tests.yml
@@ -99,3 +99,22 @@ test:3.9.0:
   extends:
     - .cpython:3.9.0
     - .test
+
+
+test:twemoji_mapping:
+  allow_failure: true
+  extends: .cpython
+  interruptible: true
+  rules:
+    - if: "$CI_PIPELINE_SOURCE == 'schedule' && $TEST_TWEMOJI_MAPPING != null"
+    - changes:
+        - hikari/emojis.py
+        - hikari/internal/urls.py
+  script:
+    - |+
+      set -e
+      set -x
+      apt-get install -qy git gcc g++ make
+      pip install nox 'virtualenv<20.0.19'
+      nox -s twemoji-test
+  stage: test
