--- a/ci/gitlab/linting.yml
+++ b/ci/gitlab/linting.yml
@@ -45,7 +45,7 @@ pylint:
       junit: public/pylint.xml
   extends: .lint
   script:
-   - nox -s pylint --no-error-on-external-run -- --also-junit-report --also-html-report
+   - nox -s pylint --no-error-on-external-run
 
 ###
 ### Documentation linting.
